--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 
 
 
-<MARQUEE WIDTH=600 HEIGHT=60>
+<MARQUEE WIDTH=900HEIGHT=60>
 Flying Cards.inc 2021
 </MARQUEE> 
 
-<font size=10 face="Comic Sans MS">Alle rechten voorbehouden</font>
+<p><font size=6 face="Comic Sans MS">Alle rechten voorbehouden</font></p>
+
+<p><b>Website geoptimaliseerd voor Microsoft Windows Internet Explorer 11</b></p>
+
+<img src='https://www.agconnect.nl/sites/ag/files/styles/article_main_image/public/Internet%20Explorer%20logo.jpg?itok=UTmKIqh5'alt='' />
 
