--- a/index.html
+++ b/index.html
@@ -4,17 +4,48 @@
 <b><p>Deze website bevat alle nieuwste informatie over de Flying Cards</p></b>
 <p>Als je je afvraagt wat Flying Cards zijn, dan bent u niet alleen. Zelfs de uitvinder van deze creatie weet niet wat hij doet met Microsoft Paint! Een ding is zeker, ze bestaan, als u het nu wenst of niet.
 
-<h2>Indien u Flying Cards wenst te ontvangen, gelieve deze ingevulde e-mail te sturen naar stanienana@hotmail.com: <u>Ik ( jou naam + e-mailadres ) wilt Flying Cards ontvangen en ga akkoord met de in bijlage geleverde voorwaarden in de eerstvolgende Flying Cards e-mail.</u></h2>
+<h2>Indien u Flying Cards wenst te ontvangen via e-mail, gelieve deze ingevulde e-mail te sturen naar stanienana@hotmail.com: <u>Ik ( jou naam + e-mailadres ) wilt Flying Cards ontvangen en ga akkoord met de in bijlage geleverde voorwaarden in de eerstvolgende Flying Cards e-mail.</u></h2>
 
 <p>Voor verdere vragen gelieve een e-mail te sturen naar: jenthodemonie@gmail.com, alleen voor echte vragen, commerciele spam is VERBODEN te sturen naar beide e-mail adressen. </p>
 
+<u><b><font size=5><p style="text-align:  Left;">Flying cards:</p></font></b></u>
 
+<font size=5><b><p>Burger cards</p></b>
+<img src='https://lh4.googleusercontent.com/JoKgKhsln03b2OT1X7V7dQDRFTGgRz8k8DIgF7UVglv3Uk72qc3qJRgh5epNvYyzZIJwrFFvX0NRAwRYlNQ-JxfQLidwkA-Gbj-3aM0MR7xkI1BfviJfnU0YjgN50uL3RA=w1280' width="800" height="484" alt='' />
 
-<MARQUEE WIDTH=900HEIGHT=60>
+<font size=5><b><p>Cloudy cards</p></b>
+<img src='https://lh3.googleusercontent.com/qGNmS1qlRoXebg5JWmQUPuczRFHGbD6nzzkqPASrAhGK-os1fHfJe3zuQS3sLLNhItRk1auZIP6_nZW_8c1H9iAhOFzbaGdcFb78mdPoCxFatCuFRrhh65pc7SCNygGQDA=w1280'width="800" height="484" alt='' />
+
+<font size=5><b><p>Curli cards</p></b>
+<img src='https://lh5.googleusercontent.com/m1q41HD7GCmIH5dr86RFRKLsB69BIladOdel5AlXiIfRtUwxvLIDRIdW9oluxpM6k0MXm4ZsnZ79rhChKTAZ8voARkAr8c6f0OrArLZ7wGU63Lt827ibebb3o625GsILzA=w1280'width="800" height="484" alt='' />
+
+<font size=5><b><p>Dogy cards</p></b>
+<img src='https://lh6.googleusercontent.com/8SwxLGnyRqtLGxsR0YBTxGyeCw_G70RiNxTNMeoswbsau6uhn2UiY9a3-N-Df7k_HAjS5x9zkTt55vzQQT8m8rDlck4_Hv7QONc078WmBN099JEWDdJVx7f7GUGUPj_JeQ=w1280'width="800" height="484" alt='' />
+
+<font size=5><b><p>Flying cards</p></b>
+<img src='https://lh3.googleusercontent.com/nr8Y1HE4IFfz2IZd17Kkgf3b5L6vBV5U9-w7kR5uNfJALkWNkGUo9XgjrsCuiEmNC6JDLBiE4798j8NPZ6YXOomAyeBKgGDucoeY5dI-coVtbbvjQUlPCDZBS_s2aO52Mg=w1280'width="800" height="484" alt='' />
+
+<font size=5><b><p>Lompa cards</p></b>
+<img src='https://lh5.googleusercontent.com/o5VO5ubrRcxA-Xh9fhO2786BJObTUSIQkmJHAPY6niHYP2wytJF-kfOotH89YaqipuVuRVUHQEtu6xbe2bsaOnjErH0W-HDLzpl1LxHkRX9Ax1wEmalDBn-DTtCYtUZ9sg=w1280'width="800" height="484" alt='' />
+
+<font size=5><b><p>Nugget cards</p></b>
+<img src='https://lh6.googleusercontent.com/V0egLMWWjp54ZQPPZW9GqxdgBYAS9tISlJ2KZmfBCdI-VAisAzT8dHIqVqDasBoyG14Wih70A-MUdPXWpB1LQ9mglzdZmPVngvScLTJBfQeO3N9I4KVs2IJ15QK-b_zv7Q=w1280'width="800" height="484" alt='' />
+
+<font size=5><b><p>Pimple cards</p></b>
+<img src='https://lh3.googleusercontent.com/Ehsq-FqDKfGEvir8UXj1rhtwDMhNM9Cty7ejSK0dvfjzoq7icjJIAWJbZAumqyTV7aTAd_B99gRdfBEnVolWgAvndusBa3bWt3Xfkfp8vCFsMl_hhnfJ-c9oVeVWUMCx7w=w1280'width="800" height="484" alt='' />
+
+<font size=5><b><p>Pocket cards</p></b>
+<img src='https://lh6.googleusercontent.com/r5NGw8mUguKAWDCSn1q3FukizrKZ2YzbikMD7G4MRo6mR7RgYVqjpCyeLhD3C0n22RCBuLMXUcqKmENIORuWZMfPNaqi7gPIE-AADXewV9IHXFDKO6p93Zg-HyNPD0yEgA=w1280'width="800" height="484" alt='' />
+
+<font size=5><b><p>Droenke Troela cards</p></b>
+<img src='https://lh4.googleusercontent.com/PRSNnYf11ZgLHG06ArTaQsz4EXTi8kJobxzisk_zwIwZOq3J2rze999NchnnAgaLUUbrzkGoOIaAh3y6QVw4mQvv0gEOkOW6RQB54TrHx5MMJm9-Fpw04RBeOQSUFFkJyg=w1280'width="800" height="484" alt='' />
+
+<u><p><font size=6 face="Comic Sans MS">Alle rechten voorbehouden</font></p></u>
+
+<font size=5><MARQUEE WIDTH=900HEIGHT=60>
 Flying Cards.inc 2021
-</MARQUEE> 
+</MARQUEE></font>
 
-<p><font size=6 face="Comic Sans MS">Alle rechten voorbehouden</font></p>
 
 <p><b>Website geoptimaliseerd voor Microsoft Windows Internet Explorer 11</b></p>
 
