--- a/index.html
+++ b/index.html
@@ -1,44 +1,51 @@
 <center><h1><u><b>Flying Cards Company website</b></u></h1>
 <img src='https://s3.envato.com/files/233093975/poker-cards-flying-around-H-loop-fhd-pr.jpg'alt='' />
 
-<b><p>Deze website bevat alle nieuwste informatie over de Flying Cards</p></b>
-<p>Als je je afvraagt wat Flying Cards zijn, dan bent u niet alleen. Zelfs de uitvinder van deze creatie weet niet wat hij doet met Microsoft Paint! Een ding is zeker, ze bestaan, als u het nu wenst of niet.
+<b><p>Deze website bevat alle nieuwste informatie over Flying Cards</p></b>
+<p>Als u je afvraagt wat Flying Cards zijn, dan bent u niet alleen. Flying Cards zijn postkaarten met de hand gemaakt of met Microsoft Paint! Een ding is zeker, ze bestaan, als u het nu wenst of niet.
+
 
 <h2>Indien u Flying Cards wenst te ontvangen via e-mail, gelieve deze ingevulde e-mail te sturen naar stanienana@hotmail.com: <u>Ik ( jou naam + e-mailadres ) wilt Flying Cards ontvangen en ga akkoord met de in bijlage geleverde voorwaarden in de eerstvolgende Flying Cards e-mail.</u></h2>
 
 <p>Voor verdere vragen gelieve een e-mail te sturen naar: jenthodemonie@gmail.com, alleen voor echte vragen, commerciele spam is VERBODEN te sturen naar beide e-mail adressen. </p>
 
-<u><b><font size=7><p style="text-align:  Left;">Flying cards:</p></font></b></u>
+<u><b><font size=7><p style="text-align:  Left;">Flying Cards:</p></font></b></u>
 
-<font size=5><b><p>Burger cards</p></b>
+<font size=5><b><p>Burger Cards</p></b>
 <img src='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/7DFDD541-820A-42AC-940B-20DFF6905766.png?raw=true'width="800" height="484"alt='' />
 
-<font size=5><b><p>Cloudy cards</p></b>
+<font size=5><b><p>Cloudy Cards</p></b>
 <img src='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/1DE8FCD3-C7EB-4D7C-984A-43594257463A.png?raw=true'width="800" height="484"alt='' />
 
-<font size=5><b><p>Curli cards</p></b>
+<font size=5><b><p>Curli Cards</p></b>
 <img src='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/FAD2FFAD-33B0-461E-896A-236F208E97FD.png?raw=true'width="800" height="484"alt='' />
 
-<font size=5><b><p>Dogy cards</p></b>
+<font size=5><b><p>Dogy Cards</p></b>
 <img src='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/6AF52DCC-EF83-4548-A941-260EC851A390.png?raw=true'width="800" height="484"alt='' />
 
-<font size=5><b><p>Flying cards</p></b>
+<font size=5><b><p>Flying Cards</p></b>
 <img src='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/403EC6BD-E0D1-4E18-941C-75E0749B8CDB.png?raw=true'width="800" height="484"alt='' />
 
-<font size=5><b><p>Lompa cards</p></b>
+<font size=5><b><p>Lompa Cards</p></b>
 <img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/1651A021-B71A-4527-8C59-9C3ADCBD2945.png'width="800" height="484"alt='' />
 
-<font size=5><b><p>Nugget cards</p></b>
+<font size=5><b><p>Nugget Cards</p></b>
 <img src='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/47753AFD-8FA3-44B9-A708-5D43871D9A63.png?raw=true'width="800" height="484"alt='' />
 
-<font size=5><b><p>Pimple cards</p></b>
+<font size=5><b><p>Pimple Cards</p></b>
 <img src='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/BE73ABBF-FDF1-457D-985B-1DD5CBD964D3.png?raw=true'width="800" height="484"alt='' />
 
-<font size=5><b><p>Pocket cards</p></b>
+<font size=5><b><p>Pocket Cards</p></b>
 <img src='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/C22715DB-A880-4B3A-85A4-1854B86A049A.png?raw=true'width="800" height="484"alt='' />
 
-<font size=5><b><p>Droenke Troela cards</p></b>
+<font size=5><b><p>Droenke Troela Cards</p></b>
 <img src='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/AF627D53-F0A9-4B15-AD4E-0F6A32F61176.png?raw=true'width="800" height="484"alt='' />
+
+<u><b><font size=7><p style="text-align:  Left;">Handgemaakte Flying Cards:</p></font></b></u>
+
+<font size=5><b><p>Zwijnenvlees Cards</p></b>
+<img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Zwijnenvlees%20Cards.jpg'width="800" height="484"alt='' />
+
 
 <u><p><font size=6 face="Comic Sans MS">Alle rechten voorbehouden</font></p></u>
 
