--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<center><h1><u><b>Flying Cards Company website</b></u></h1>
+
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
+<h1><u><b>Flying Cards Company website</b></u></h1>
 <img src='https://s3.envato.com/files/233093975/poker-cards-flying-around-H-loop-fhd-pr.jpg'alt='' />
 
 <b><p>Deze website bevat alle nieuwste informatie over Flying Cards</p></b>
@@ -60,4 +62,6 @@ Flying Cards.inc 2021
 
 <img src='https://www.agconnect.nl/sites/ag/files/styles/article_main_image/public/Internet%20Explorer%20logo.jpg?itok=UTmKIqh5'alt='' />
 
+<img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 
+               
