--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ Flying Cards.inc 2021
 
 <p><b>Website geoptimaliseerd voor Microsoft Windows Internet Explorer 11</b></p>
 
-<img src='https://www.agconnect.nl/sites/ag/files/styles/article_main_image/public/Internet%20Explorer%20logo.jpg?itok=UTmKIqh5'alt='' />
+<center><img src='https://www.agconnect.nl/sites/ag/files/styles/article_main_image/public/Internet%20Explorer%20logo.jpg?itok=UTmKIqh5'alt='' />
 
-<img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 
                
