--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="shortcut icon" href="https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/favicon.ico">
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 <h1><u><b>Flying Cards Company website</b></u></h1>
