--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <link rel="shortcut icon" href="https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/favicon.ico">
 
+<body bgcolor="#BBFFFF">
+
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 <h1><u><b>Flying Cards Company website</b></u></h1>
 <img src='https://s3.envato.com/files/233093975/poker-cards-flying-around-H-loop-fhd-pr.jpg'alt='' />
@@ -44,6 +46,9 @@
 <font size=5><b><p>Droenke Troela Cards</p></b>
 <img src='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/AF627D53-F0A9-4B15-AD4E-0F6A32F61176.png?raw=true'width="800" height="484"alt='' />
 
+<font size=5><b><p>MR. PAT & MAT Cards</p></b>
+<img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/MR.%20PAT%20%26%20MAT%20Cards.png'width="800" height="484"alt='' />
+
 <u><b><font size=7><p style="text-align:  Left;">Handgemaakte Flying Cards:</p></font></b></u>
 
 <font size=5><b><p>Zwijnenvlees Cards</p></b>
@@ -61,7 +66,7 @@ Flying Cards.inc 2021
 
 <p><b>Website geoptimaliseerd voor Microsoft Windows Internet Explorer 11</b></p>
 
-<center><img src='https://www.agconnect.nl/sites/ag/files/styles/article_main_image/public/Internet%20Explorer%20logo.jpg?itok=UTmKIqh5'alt='' />
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/A11C7986-A968-4396-8EA7-65074B71CB81.png'width="500" height="219.5"alt='' />
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 
