--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<head><meta name="google-site-verification" content="R8Qn02zlyzOLCwmUoiByRtJY47gzya-Has9Sse4dStU" /></head>
+
 <link rel="shortcut icon" href="https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/favicon.ico">
 
 <body bgcolor="#BBFFFF">
