--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 <font size=5><b><p>Mr. Chocolate Cards</p></b>
 <img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mr.%20Chocolate%20cards.png'width="800" height="484"alt='' />
 
+<font size=5><b><p>Mr. Potato Head Cards</p></b>
+<img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mr.%20Potato%20Head%20Cards.png'width="800" height="484"alt='' />
+
 <u><b><font size=7><p style="text-align:  Left;">Handgemaakte Flying Cards:</p></font></b></u>
 
 <font size=5><b><p>Zwijnenvlees Cards</p></b>
