--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@ Flying Cards.inc 2021
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/A11C7986-A968-4396-8EA7-65074B71CB81.png'width="500" height="219.5"alt='' />
 
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif'alt='' />: jenthodemonie@gmail.com, stanienana@hotmail.com
+
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 
                
