--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 <font size=5><b><p>Home Cards</p></b>
 <img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Home%20Cards.jpg'width="800" height="484"alt='' />
 
+<font size=5><b><p>Mister Grandpa Troela Cards</p></b>
+<img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mister%20Grandpa%20Troela%20Cards.jpg'width="800" height="484"alt='' />
+
 <u><p><font size=6 face="Comic Sans MS">Alle rechten voorbehouden</font></p></u>
 
 <font size=5><MARQUEE WIDTH=900HEIGHT=60>
