--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ Flying Cards.inc 2021
 </MARQUEE></font>
 
 
-<p><b>Website geoptimaliseerd voor Microsoft Windows Internet Explorer 11</b></p>
+<p><b> Voor een betere websiteondersteuning raden wij Microsoft Edge aan inplaats van Internet Explorer 11</p></b>
 
-<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/A11C7986-A968-4396-8EA7-65074B71CB81.png'width="500" height="219.5"alt='' />
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png'alt='' />
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif'alt='' />: jenthodemonie@gmail.com, stanienana@hotmail.com
 
