--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body bgcolor="#BBFFFF">
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
+
 <h1><u><b>Flying Cards Company website</b></u></h1>
 <img src='https://s3.envato.com/files/233093975/poker-cards-flying-around-H-loop-fhd-pr.jpg'alt='' />
 
@@ -78,6 +79,9 @@ Flying Cards.inc 2021
 <p><b> Voor een betere websiteondersteuning raden wij Microsoft Edge aan inplaats van Internet Explorer 11</p></b>
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png'alt='' />
+
+<font size=6><center>België, Belgien, Belgique, Belguim</font size=6>
+<img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/392px-Great_coat_of_arms_of_Belgium.svg.png'alt='' />
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif'alt='' />: jenthodemonie@gmail.com, stanienana@hotmail.com
 
