--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ Flying Cards.inc 2021
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png'alt='' />
 
-<font size=6><center>België, Belgien, Belgique, Belguim</font size=6>
-<img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/392px-Great_coat_of_arms_of_Belgium.svg.png'alt='' />
+<center><font size=6>België, Belgien, Belgique, Belguim</font size=6>
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/392px-Great_coat_of_arms_of_Belgium.svg.png'alt='' />
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif'alt='' />: jenthodemonie@gmail.com, stanienana@hotmail.com
 
