--- a/sitemap.html
+++ b/sitemap.html
@@ -5,7 +5,7 @@
 <h1>Weblinks die bij de website horen</h1>
 
 <p><h2>1: facvicon</h2>
-<a href=''>https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/favicon.ico</a></p><br>
+<a href=''>https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/favicon.ico</a><br></p>
 
 <p><h2>2 :anibar</h2>
 <a href=''>https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif</a></p><br>
@@ -85,9 +85,11 @@
 <br><br>
 <br><br>
 
-<p><b> Voor een betere websiteondersteuning raden wij Microsoft Edge aan inplaats van Internet Explorer 11</p></b>
+<h2><p><b> Voor een betere websiteondersteuning raden wij Microsoft Edge aan inplaats van Internet Explorer 11</p></b></h2>
 
-<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png'alt='' />
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png'alt='' /><br>
+
+<p><h1>links zullen NOOIT werken, copy paste het adres in je webbrowser!</p></h1>
 
 
 
