--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@ Flying Cards.inc 2021
 <center><font size=6>België, Belgien, Belgique, Belguim</font size=6>
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/392px-Great_coat_of_arms_of_Belgium.svg.png'alt='' />
 
-<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif'alt='' />: jenthodemonie@gmail.com, stanienana@hotmail.com
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif'alt='' />: jenthodemonie@gmail.com, stanienana@hotmail.com 
+
+<br><br>
+
+weblinks: <a href='https://jenthodemonie.github.io/sitemap.html'>weblinks van deze website + verwijzing naar gebruikte afbeeldingen</a>
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 
