--- a/sitemap.html
+++ b/sitemap.html
@@ -4,6 +4,8 @@
 
 <h1>Weblinks die bij de website horen</h1>
 
+<center>
+
 <p><h2>1: facvicon</h2>
 <a href=''>https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/favicon.ico</a><br></p>
 
@@ -55,6 +57,7 @@
 <br><br>
 <br><br>
 
+<center>
 
 <p><h2>1: zwijnenvlees cards</h2>
 <a href=''>https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Zwijnenvlees%20Cards.jpg</a> </p><br>
@@ -68,6 +71,7 @@
 <br><br>
 <br><br>
 
+<center>
 
 <p><h2>1: internet explorer 11 naar ms edge</h2>
 <a href=''>https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png</a>
@@ -87,9 +91,9 @@
 
 <h2><p><b> Voor een betere websiteondersteuning raden wij Microsoft Edge aan inplaats van Internet Explorer 11</p></b></h2>
 
-<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png'alt='' /><br>
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png'width="280"height="101"alt='' /><br>
 
-<p><h1>links zullen NOOIT werken, copy paste het adres in je webbrowser!</p></h1>
+<p><h1>alleen de links die bij onderdeel 3, onderverdeling 2 en dan onderverdeling "naar" staan werken, de andere copy paste je in de adresblak van je webbrowser!</p></h1>
 
 
 
