--- a/sitemap.html
+++ b/sitemap.html
@@ -2,7 +2,7 @@
 
 <body bgcolor="#BBFFFF">
 
-<h1>Weblinks die bij de website horen</h1>
+<b><u><h1>Weblinks die bij de website horen</h1></u></b>
 
 <center>
 
@@ -88,6 +88,15 @@
 
 <br><br>
 <br><br>
+
+<center>
+
+<p><h2>1: kerst cards</h2>
+<a href=''>https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Kerst%20Cards.png</a>
+
+<br><br>
+<br><br>
+
 
 <h2><p><b> Voor een betere websiteondersteuning raden wij Microsoft Edge aan inplaats van Internet Explorer 11</p></b></h2>
 
