--- a/index.html
+++ b/index.html
@@ -69,12 +69,18 @@
 <font size=5><b><p>Mister Grandpa Troela Cards</p></b>
 <img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mister%20Grandpa%20Troela%20Cards.jpg'width="800" height="484"alt='' />
 
+<u><b><font size=7><p style="text-align:  Left;">Speciaale gelegenheids Cards:</p></font></b></u>
+
+<font size=5><b><p>Kerst Cards</p></b>
+<img src='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/Kerst%20Cards.png?raw=true'width="347" height="631"alt='' />
+
 <u><p><font size=6 face="Comic Sans MS">Alle rechten voorbehouden</font></p></u>
 
 <font size=5><MARQUEE WIDTH=900HEIGHT=60>
 Flying Cards.inc 2021
 </MARQUEE></font>
 
+<br>
 
 <p><b> Voor een betere websiteondersteuning raden wij Microsoft Edge aan inplaats van Internet Explorer 11</p></b>
 
@@ -96,5 +102,6 @@ weblinks: <a href='https://jenthodemonie.github.io/sitemap.html'>weblinks van de
 <br><br>
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
+
 
                
