--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <font size=5><b><p>Mister Grandpa Troela Cards</p></b>
 <img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mister%20Grandpa%20Troela%20Cards.jpg'width="800" height="484"alt='' />
 
-<u><b><font size=7><p style="text-align:  Left;">Speciaale gelegenheids Cards:</p></font></b></u>
+<u><b><font size=7><p style="text-align:  Left;">Speciale gelegenheids Cards:</p></font></b></u>
 
 <font size=5><b><p>Kerst Cards</p></b>
 <img src='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/Kerst%20Cards.png?raw=true'width="347" height="631"alt='' />
