--- a/sitemap.html
+++ b/sitemap.html
@@ -13,7 +13,7 @@
 <a href=''>https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif</a></p><br>
 
 <p><h2>3: vliegende kaarten</h2>
-<a href=''>https://s3.envato.com/files/233093975/poker-cards-flying-around-H-loop-fhd-pr.jpg</a></p><br>
+<a href=''>https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/vliegende%20kaarten.JPG</a></p><br>
 
 <p><h2>4: burger cards</h2>
 <a href=''>https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/7DFDD541-820A-42AC-940B-20DFF6905766.png?raw=true</a></p><br>
