--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 
 <h1><u><b>Flying Cards Company website</b></u></h1>
-<img src='https://s3.envato.com/files/233093975/poker-cards-flying-around-H-loop-fhd-pr.jpg'alt='' />
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/vliegende%20kaarten.JPG'width="1008" height="568"alt='' />
 
 <b><p>Deze website bevat alle nieuwste informatie over Flying Cards</p></b>
 <p>Als u je afvraagt wat Flying Cards zijn, dan bent u niet alleen. Flying Cards zijn postkaarten met de hand gemaakt of met Microsoft Paint! Een ding is zeker, ze bestaan, als u het nu wenst of niet.
