--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCUMENT type HTML>
+
 <head><meta name="google-site-verification" content="R8Qn02zlyzOLCwmUoiByRtJY47gzya-Has9Sse4dStU" /></head>
 
 <link rel="shortcut icon" href="https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/favicon.ico">
@@ -13,7 +15,7 @@
 <p>Als u je afvraagt wat Flying Cards zijn, dan bent u niet alleen. Flying Cards zijn postkaarten met de hand gemaakt of met Microsoft Paint! Een ding is zeker, ze bestaan, als u het nu wenst of niet.
 
 
-<h2>Indien u Flying Cards wenst te ontvangen via e-mail, gelieve deze ingevulde e-mail te sturen naar stanienana@hotmail.com: <u>Ik ( jou naam + e-mailadres ) wilt Flying Cards ontvangen en ga akkoord met de in bijlage geleverde voorwaarden in de eerstvolgende Flying Cards e-mail.</u></h2>
+<h2>Indien u Flying Cards wenst te ontvangen via e-mail, gelieve deze ingevulde e-mail te sturen naar stanienana@hotmail.com: <u>Ik ( jou naam + e-mailadres ) wil Flying Cards ontvangen en ga akkoord met de in bijlage geleverde voorwaarden in de eerstvolgende Flying Cards e-mail.</u></h2>
 
 <p>Voor verdere vragen gelieve een e-mail te sturen naar: jenthodemonie@gmail.com, alleen voor echte vragen, commerciele spam is VERBODEN te sturen naar beide e-mail adressen. </p>
 
