--- a/sitemap.html
+++ b/sitemap.html
@@ -1,58 +1,63 @@
+<!DOCUMENT type HTML>
+
 <center>
 
 <body bgcolor="#BBFFFF">
+
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
+
 
 <b><u><h1>Weblinks die bij de website horen</h1></u></b>
 
 <center>
 
 <p><h2>1: facvicon</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/favicon.ico <br></p>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/favicon.ico '>favicon</a><br></p>
 
 <p><h2>2 :anibar</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif <br></p>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif '>anibar</a><br></p>
 
 <p><h2>3: vliegende kaarten</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/vliegende%20kaarten.JPG <br></p>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/vliegende%20kaarten.JPG '>vliegende kaarten</a><br></p>
 
 <p><h2>4: burger cards</h2>
-https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/7DFDD541-820A-42AC-940B-20DFF6905766.png?raw=true </p><br>
+<a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/7DFDD541-820A-42AC-940B-20DFF6905766.png?raw=true'>burger cards</a> </p><br>
 
 <p><h2>5: cloudy cards</h2>
-https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/1DE8FCD3-C7EB-4D7C-984A-43594257463A.png?raw=true </p><br>
+<a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/1DE8FCD3-C7EB-4D7C-984A-43594257463A.png?raw=true'>cloudy cards</a></p><br>
 
 <p><h2>6: curli cards</h2>
-https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/FAD2FFAD-33B0-461E-896A-236F208E97FD.png?raw=true </p><br>
+<a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/FAD2FFAD-33B0-461E-896A-236F208E97FD.png?raw=true  '>curli cards</a></p><br>
 
 <p><h2>7: dogy cards</h2>
-https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/6AF52DCC-EF83-4548-A941-260EC851A390.png?raw=true </p><br>
+<a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/6AF52DCC-EF83-4548-A941-260EC851A390.png?raw=true '>dogy cards</a></p><br>
 
 <p><h2>8: flying cards</h2> 
-https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/403EC6BD-E0D1-4E18-941C-75E0749B8CDB.png?raw=true </p><br>
+<a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/403EC6BD-E0D1-4E18-941C-75E0749B8CDB.png?raw=true '>flying cards</a></p><br>
 
 <p><h2>9: lompa cards</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/1651A021-B71A-4527-8C59-9C3ADCBD2945.png </p><br>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/1651A021-B71A-4527-8C59-9C3ADCBD2945.png '>lompa cards</a></p><br>
 
 <p><h2>10: nugget cards</h2>
-https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/47753AFD-8FA3-44B9-A708-5D43871D9A63.png?raw=true </p><br>
+<a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/47753AFD-8FA3-44B9-A708-5D43871D9A63.png?raw=true '>nugget cards</a></p><br>
 
 <p><h2>11: pimple cards</h2>
-https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/BE73ABBF-FDF1-457D-985B-1DD5CBD964D3.png?raw=true </p><br>
+<a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/BE73ABBF-FDF1-457D-985B-1DD5CBD964D3.png?raw=true '>pimple cards</a></p><br>
 
 <p><h2>12: pocket cards</h2>
-https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/C22715DB-A880-4B3A-85A4-1854B86A049A.png?raw=true </p><br>
+<a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/C22715DB-A880-4B3A-85A4-1854B86A049A.png?raw=true '>pocket cards</a></p><br>
 
 <p><h2>13: droenke troela cards</h2>
-https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/AF627D53-F0A9-4B15-AD4E-0F6A32F61176.png?raw=true </p><br>
+<a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/AF627D53-F0A9-4B15-AD4E-0F6A32F61176.png?raw=true '>droenke troela cards</a></p><br>
 
 <p><h2>14: mr. pat & mat cards</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/MR.%20PAT%20%26%20MAT%20Cards.png </p><br>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/MR.%20PAT%20%26%20MAT%20Cards.png '>mr. pat & mat cards</a></p><br>
 
 <p><h2>15: mr chocolate cards</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mr.%20Chocolate%20cards.png </p><br>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mr.%20Chocolate%20cards.png '>mr. chocolate cards</a></p><br>
 
 <p><h2>16: mr. potato head cards</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mr.%20Potato%20Head%20Cards.png </p><br>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mr.%20Potato%20Head%20Cards.png '>mr. potato head cards</a></p><br>
 
 <br><br>
 <br><br>
@@ -60,13 +65,13 @@ https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mr.
 <center>
 
 <p><h2>1: zwijnenvlees cards</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Zwijnenvlees%20Cards.jpg </p><br>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Zwijnenvlees%20Cards.jpg '>zwijnenvlees cards</a></p><br>
 
 <p><h2>2: home cards</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Home%20Cards.jpg </p><br>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Home%20Cards.jpg '>home cards</a></p><br>
 
 <p><h2>3: mister grandpa troela cards</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mister%20Grandpa%20Troela%20Cards.jpg </p><br>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mister%20Grandpa%20Troela%20Cards.jpg '>mister grandpa troela cards</a></p><br>
 
 <br><br>
 <br><br>
@@ -74,17 +79,17 @@ https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mis
 <center>
 
 <p><h2>1: internet explorer 11 naar ms edge</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png </p><br>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png '>ie 11 naar edge</a></p><br>
 
 
 <p><h2>2: België, Belgien, Belgique, Belguim</h2> <br>
 
 <p>naar: <a href="//commons.wikimedia.org/wiki/User:Sodacan" title="User:Sodacan">Sodacan</a>, <a href="//commons.wikimedia.org/wiki/User:Katepanomegas" title="User:Katepanomegas">Katepanomegas</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=28462803">Link</a> <br><br>
 
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/392px-Great_coat_of_arms_of_Belgium.svg.png </p><br>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/392px-Great_coat_of_arms_of_Belgium.svg.png '>België, Belgien, Belgique, Belguim</a></p><br>
 
 <p><h2>3: mailbox</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif </p><br>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif '>mailbox</a></p><br>
 
 <br><br>
 <br><br>
@@ -92,7 +97,7 @@ https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mai
 <center>
 
 <p><h2>1: kerst cards</h2>
-https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Kerst%20Cards.png </p><br>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Kerst%20Cards.png '>kerst cards</a></p><br>
 
 <br><br>
 <br><br>
@@ -100,9 +105,12 @@ https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Ker
 
 <h2><p><b> Voor een betere websiteondersteuning raden wij Microsoft Edge aan inplaats van Internet Explorer 11</p></b></h2>
 
-<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png'width="280"height="101"alt='' /><br>
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png'alt='' /><br>
 
-<p><h1>alleen de links die bij onderdeel 3, onderverdeling 2 en dan onderverdeling "naar" staan werken, de andere copy paste je in de adresblak van je webbrowser!</p></h1>
+<font size=6><a href='https://jenthodemonie.github.io/'>terug naar "Homepagina"</a></font size=6>
+
+<center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
+
 
 
 
