--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 
 <h1><u><b>Flying Cards Company website</b></u></h1>
+
+<table border='8'>
+<td bgcolor="lime"><a href='https://jenthodemonie.github.io/sitemap.html'>Links</a></td>
+</table>
+
+<br>
+
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/vliegende%20kaarten.JPG'width="672" height="379"alt='' />
 
 <b><p>Deze website bevat alle nieuwste informatie over Flying Cards</p></b>
@@ -96,10 +103,6 @@ Flying Cards.inc 2021
 <br><br>
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif'alt='' />: jenthodemonie@gmail.com, stanienana@hotmail.com 
-
-<br><br>
-
-weblinks: <a href='https://jenthodemonie.github.io/sitemap.html'>weblinks van deze website + verwijzing naar gebruikte afbeeldingen</a>
 
 <br><br>
 
