--- a/sitemap.html
+++ b/sitemap.html
@@ -9,6 +9,10 @@
 
 <b><u><h1>Weblinks die bij de website horen</h1></u></b>
 
+<table border='8'>
+<td bgcolor="lime"><a href='https://jenthodemonie.github.io'>Homepagina</a></td>
+</table>
+
 <center>
 
 <p><h2>1: facvicon</h2>
@@ -107,7 +111,7 @@
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png'alt='' /><br>
 
-<font size=6><a href='https://jenthodemonie.github.io/'>terug naar "Homepagina"</a></font size=6>
+<br>
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 
