--- a/sitemap.html
+++ b/sitemap.html
@@ -103,6 +103,10 @@
 <p><h2>1: kerst cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Kerst%20Cards.png '>kerst cards</a></p><br>
 
+<p><h2>2: King Kong Party Cards</h2>
+<a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/King%20Kong%20Party%20Cards.png?raw=true'>king kong party cards</a>
+
+
 <br><br>
 <br><br>
 
