--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 
-<h1><u><b>Flying Cards Company website</b></u></h1>
+<h1><u><b><font size=8><i>Flying Cards Website</i></b></u></h1></font size=8>
 
-<table border='8'>
-<td bgcolor="lime"><a href='https://jenthodemonie.github.io/sitemap.html'>Links</a></td>
+<table border='10'>
+<td bgcolor="lime"><font size=6><a href='https://jenthodemonie.github.io/sitemap.html'>Links</a></font=size=6></td>
 </table>
 
 <br>
