--- a/sitemap.html
+++ b/sitemap.html
@@ -7,13 +7,15 @@
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 
 
-<b><u><h1>Weblinks die bij de website horen</h1></u></b>
+<b><u><h1><font size=8><i>Weblinks die bij de website horen</i></h1></u></b></font size=8>
 
-<table border='8'>
-<td bgcolor="lime"><a href='https://jenthodemonie.github.io'>Homepagina</a></td>
+<table border='10'>
+<td bgcolor="lime"><font size=6><a href='https://jenthodemonie.github.io'>Homepagina</a></font size=6></td>
 </table>
 
 <center>
+
+<u><b><font size=6><p style="text-align:  Left;">Website Onderdelen:</p></font></b></u>
 
 <p><h2>1: facvicon</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/favicon.ico '>favicon</a><br></p>
@@ -22,45 +24,63 @@
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif '>anibar</a><br></p>
 
 <p><h2>3: vliegende kaarten</h2>
-<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/vliegende%20kaarten.JPG '>vliegende kaarten</a><br></p>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/vliegende%20kaarten.JPG '>vliegende kaarten</a><br></p> 
 
-<p><h2>4: burger cards</h2>
+<p><h2>4: internet explorer 11 naar ms edge</h2>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png '>ie 11 naar edge</a></p><br>
+
+<p><h2>5: België, Belgien, Belgique, Belguim</h2> <br>
+
+<p>naar: <a href="//commons.wikimedia.org/wiki/User:Sodacan" title="User:Sodacan">Sodacan</a>, <a href="//commons.wikimedia.org/wiki/User:Katepanomegas" title="User:Katepanomegas">Katepanomegas</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=28462803">Link</a> <br><br>
+
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/392px-Great_coat_of_arms_of_Belgium.svg.png '>België, Belgien, Belgique, Belguim</a></p><br>
+
+<p><h2>6: mailbox</h2>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif '>mailbox</a></p><br>
+
+<br><br>
+<br><br>
+
+<u><b><font size=6><p style="text-align:  Left;">Flying Cards:</p></font></b></u>
+
+
+<p><h2>1: Burger Cards</h2>
 <a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/7DFDD541-820A-42AC-940B-20DFF6905766.png?raw=true'>burger cards</a> </p><br>
 
-<p><h2>5: cloudy cards</h2>
+<p><h2>2: Cloudy Cards</h2>
 <a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/1DE8FCD3-C7EB-4D7C-984A-43594257463A.png?raw=true'>cloudy cards</a></p><br>
 
-<p><h2>6: curli cards</h2>
+<p><h2>3: Curli Cards</h2>
 <a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/FAD2FFAD-33B0-461E-896A-236F208E97FD.png?raw=true  '>curli cards</a></p><br>
 
-<p><h2>7: dogy cards</h2>
+<p><h2>4: Dogy Cards</h2>
 <a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/6AF52DCC-EF83-4548-A941-260EC851A390.png?raw=true '>dogy cards</a></p><br>
 
-<p><h2>8: flying cards</h2> 
+<p><h2>5: Flying Cards</h2> 
 <a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/403EC6BD-E0D1-4E18-941C-75E0749B8CDB.png?raw=true '>flying cards</a></p><br>
 
-<p><h2>9: lompa cards</h2>
+<p><h2>6:Lompa Cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/1651A021-B71A-4527-8C59-9C3ADCBD2945.png '>lompa cards</a></p><br>
 
-<p><h2>10: nugget cards</h2>
+<p><h2>7: Nugget Cards</h2>
 <a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/47753AFD-8FA3-44B9-A708-5D43871D9A63.png?raw=true '>nugget cards</a></p><br>
 
-<p><h2>11: pimple cards</h2>
+<p><h2>8: Pimple Cards</h2>
 <a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/BE73ABBF-FDF1-457D-985B-1DD5CBD964D3.png?raw=true '>pimple cards</a></p><br>
 
-<p><h2>12: pocket cards</h2>
+<p><h2>9: Pocket Cards</h2>
 <a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/C22715DB-A880-4B3A-85A4-1854B86A049A.png?raw=true '>pocket cards</a></p><br>
 
-<p><h2>13: droenke troela cards</h2>
+<p><h2>10: Droenke Troela Cards</h2>
 <a href='https://github.com/jenthodemonie/jenthodemonie.github.io/blob/main/AF627D53-F0A9-4B15-AD4E-0F6A32F61176.png?raw=true '>droenke troela cards</a></p><br>
 
-<p><h2>14: mr. pat & mat cards</h2>
+<p><h2>11: MR. PAT & MAT Cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/MR.%20PAT%20%26%20MAT%20Cards.png '>mr. pat & mat cards</a></p><br>
 
-<p><h2>15: mr chocolate cards</h2>
+<p><h2>12: Mr. Chocolate Cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mr.%20Chocolate%20cards.png '>mr. chocolate cards</a></p><br>
 
-<p><h2>16: mr. potato head cards</h2>
+<p><h2>13: Mr. Potato Head Cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mr.%20Potato%20Head%20Cards.png '>mr. potato head cards</a></p><br>
 
 <br><br>
@@ -68,13 +88,15 @@
 
 <center>
 
-<p><h2>1: zwijnenvlees cards</h2>
+<u><b><font size=6><p style="text-align:  Left;"> Handgemaakte Flying Cards:</p></font></b></u>
+
+<p><h2>1: Zwijnenvlees Cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Zwijnenvlees%20Cards.jpg '>zwijnenvlees cards</a></p><br>
 
-<p><h2>2: home cards</h2>
+<p><h2>2: Home Cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Home%20Cards.jpg '>home cards</a></p><br>
 
-<p><h2>3: mister grandpa troela cards</h2>
+<p><h2>3: Mister Grandpa Troela Cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mister%20Grandpa%20Troela%20Cards.jpg '>mister grandpa troela cards</a></p><br>
 
 <br><br>
@@ -82,25 +104,9 @@
 
 <center>
 
-<p><h2>1: internet explorer 11 naar ms edge</h2>
-<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png '>ie 11 naar edge</a></p><br>
+<u><b><font size=6><p style="text-align:  Left;"> Speciale gelegenheids Cards:</p></font></b></u>
 
-
-<p><h2>2: België, Belgien, Belgique, Belguim</h2> <br>
-
-<p>naar: <a href="//commons.wikimedia.org/wiki/User:Sodacan" title="User:Sodacan">Sodacan</a>, <a href="//commons.wikimedia.org/wiki/User:Katepanomegas" title="User:Katepanomegas">Katepanomegas</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=28462803">Link</a> <br><br>
-
-<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/392px-Great_coat_of_arms_of_Belgium.svg.png '>België, Belgien, Belgique, Belguim</a></p><br>
-
-<p><h2>3: mailbox</h2>
-<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif '>mailbox</a></p><br>
-
-<br><br>
-<br><br>
-
-<center>
-
-<p><h2>1: kerst cards</h2>
+<p><h2>1: Kerst Cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Kerst%20Cards.png '>kerst cards</a></p><br>
 
 <p><h2>2: King Kong Party Cards</h2>
@@ -118,8 +124,4 @@
 <br>
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
-
-
-
-
 
