--- a/index.html
+++ b/index.html
@@ -8,11 +8,22 @@
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/anibar.gif'alt='' />
 
+
 <h1><u><b><font size=8><i>Flying Cards Website</i></b></u></h1></font size=8>
 
+<br><br>
+
 <table border='10'>
+
+<td bgcolor="lime"><font size=6><a href='https://jenthodemonie.github.io/'>Homepagina</a></font=size=6></td> 
+
 <td bgcolor="lime"><font size=6><a href='https://jenthodemonie.github.io/sitemap.html'>Links</a></font=size=6></td>
-</table>
+
+<td bgcolor="lime"><font size=6><a href='https://jenthodemonie.github.io/informatie.html'>Informatie</a></font=size=6></td>
+
+</table> 
+
+<br><br> 
 
 <br>
 
