--- a/sitemap.html
+++ b/sitemap.html
@@ -9,13 +9,23 @@
 
 <b><u><h1><font size=8><i>Weblinks die bij de website horen</i></h1></u></b></font size=8>
 
-<table border='10'>
-<td bgcolor="lime"><font size=6><a href='https://jenthodemonie.github.io'>Homepagina</a></font size=6></td>
+<br><br>
+
+<table border='10'>    
+
+<td bgcolor="lime"><font size=6><a href='https://jenthodemonie.github.io/'>Homepagina</a></font=size=6></td>
+
+<td bgcolor="lime"><font size=6><a href='https://jenthodemonie.github.io/sitemap.html'>Links</a></font=size=6></td>
+
+<td bgcolor="lime"><font size=6><a href='https://jenthodemonie.github.io/informatie.html'>Informatie</a></font=size=6></td>
+
 </table>
+
+<br><br>
 
 <center>
 
-<u><b><font size=6><p style="text-align:  Left;">Website Onderdelen:</p></font></b></u>
+<u><b><font size=8><p style="text-align:  Left;">Website Onderdelen:</p></font></b></u>
 
 <p><h2>1: facvicon</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/favicon.ico '>favicon</a><br></p>
@@ -41,7 +51,7 @@
 <br><br>
 <br><br>
 
-<u><b><font size=6><p style="text-align:  Left;">Flying Cards:</p></font></b></u>
+<u><b><font size=8><p style="text-align:  Left;">Flying Cards:</p></font></b></u>
 
 
 <p><h2>1: Burger Cards</h2>
@@ -88,7 +98,7 @@
 
 <center>
 
-<u><b><font size=6><p style="text-align:  Left;"> Handgemaakte Flying Cards:</p></font></b></u>
+<u><b><font size=8><p style="text-align:  Left;"> Handgemaakte Flying Cards:</p></font></b></u>
 
 <p><h2>1: Zwijnenvlees Cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Zwijnenvlees%20Cards.jpg '>zwijnenvlees cards</a></p><br>
@@ -104,7 +114,7 @@
 
 <center>
 
-<u><b><font size=6><p style="text-align:  Left;"> Speciale gelegenheids Cards:</p></font></b></u>
+<u><b><font size=8><p style="text-align:  Left;"> Speciale gelegenheids Cards:</p></font></b></u>
 
 <p><h2>1: Kerst Cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Kerst%20Cards.png '>kerst cards</a></p><br>
