--- a/informatie.html
+++ b/informatie.html
@@ -26,16 +26,16 @@
  
 <p style="text-align:  Left;"><font size=6> ! ik antwoord ALLEEN op normale zaken, stuur dan ook geen abnormale dingen !
 
-<p style="text-align:  Left;"><font size=5><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif'alt='' />: jenthodemonie@gmail.com, stanienana@hotmail.com 
+<p style="text-align:  Left;"><font size=5><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif'alt='' />: flying.cards@hotmail.com
 
-<p style="text-align:  Left;"><font size=5> Voor zaken die niet kunnen wachten stuurt op het e-mail adres: jenthodemonie@gmail.com
+<p style="text-align:  Left;"><font size=5> * Noot: For all internet criminals, i don't give a damm about the shit you do and i won't fall for the NASTY TRICKS you're using to get MONEY out of me.
 
-<p style="text-align:  Left;"><font size=5> Voor zaken die kunnen wachten stuurt op het e-mail adres: stanienana@hotmail.com
+<p style="text-align:  Left;"><font size=5> * Soms kan het even duren voor ik antwoord, wees geduldig. Als u beleeft bent met de vraagstelling zal ik zeker atwoorden op uw vraag.
 
 <p style="text-align:  Left;"><font size=6> IK CONROLEER OP RELEVANTIE !!!
 
 
-<br><br>
+
 <br><br>
 
 
@@ -46,7 +46,7 @@
 <p style="text-align:  Left;"><font size=5> Meer informatie gewenst omtrent voorwaarden? Stuur dan een e-mail naar stanienana@hotmail.com en verduidelijk wat je wilt weten!</p>
 
 
-<br><br>
+
 <br><br>
 
 
@@ -59,7 +59,7 @@
 
 <h2>Indien u Flying Cards wenst te ontvangen via e-mail, gelieve deze ingevulde e-mail te sturen naar stanienana@hotmail.com: <u>Ik ( jou naam + e-mailadres ) wil Flying Cards ontvangen en ga akkoord met de in bijlage geleverde voorwaarden in de eerstvolgende Flying Cards e-mail.</u></h2>
 
-<br><br>
+
 <br><br>
 
 
@@ -72,7 +72,7 @@
 <br><br>
 
 
-<h2><p><b> Voor een betere websiteondersteuning raden wij Microsoft Edge aan inplaats van Internet Explorer 11</p></b></h2>
+<b><p>Voor een betere websiteondersteuning raden wij Microsoft Edge aan inplaats van Internet Explorer 11</p></b>
 
 <center><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/ie-to-edge.png'alt='' /><br>
 
