--- a/informatie.html
+++ b/informatie.html
@@ -43,7 +43,7 @@
 
 <p style="text-align:  Left;"><font size=5> Je bent zeker vrij deze afbeeldingen af te drukken maar wij vragen met aandrang ze niet te verspreiden!</p>
 
-<p style="text-align:  Left;"><font size=5> Meer informatie gewenst omtrent voorwaarden? Stuur dan een e-mail naar stanienana@hotmail.com en verduidelijk wat je wilt weten!</p>
+<p style="text-align:  Left;"><font size=5> Meer informatie gewenst omtrent voorwaarden? Stuur dan een e-mail naar flying.cards@hotmail.com en verduidelijk wat je wilt weten!</p>
 
 
 
@@ -54,10 +54,10 @@
 
 <p style="text-align:  Left;"><font size=5> Als u op de hoogte wilt worden gehouden via e-mail over de nieuwste Flying Cards gelieve dan volgende te sturen ( ingevuld ) naar onderstaand e-mail adres.</p>
 
-<p style="text-align:  Left;"><font size=5> Uitschrijven kan op elk moment, stuur hiervoor beleefd een e-mail naar stanienana@hotmail.com</p>
+<p style="text-align:  Left;"><font size=5> Uitschrijven kan op elk moment, stuur hiervoor beleefd een e-mail naar flying.cards@hotmail.com</p>
 
 
-<h2>Indien u Flying Cards wenst te ontvangen via e-mail, gelieve deze ingevulde e-mail te sturen naar stanienana@hotmail.com: <u>Ik ( jou naam + e-mailadres ) wil Flying Cards ontvangen en ga akkoord met de in bijlage geleverde voorwaarden in de eerstvolgende Flying Cards e-mail.</u></h2>
+<h2>Indien u Flying Cards wenst te ontvangen via e-mail, gelieve deze ingevulde e-mail te sturen naar flying.cards@hotmail.com: <u>Ik ( jou naam + e-mailadres ) wil Flying Cards ontvangen en ga akkoord met de in bijlage geleverde voorwaarden in de eerstvolgende Flying Cards e-mail.</u></h2>
 
 
 <br><br>
