--- a/sitemap.html
+++ b/sitemap.html
@@ -21,7 +21,7 @@
 
 </table>
 
-<br><br>
+<br><br> 
 
 <center>
 
@@ -48,8 +48,9 @@
 <p><h2>6: mailbox</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif '>mailbox</a></p><br>
 
+
 <br><br>
-<br><br>
+
 
 <u><b><font size=8><p style="text-align:  Left;">Flying Cards:</p></font></b></u>
 
@@ -93,8 +94,14 @@
 <p><h2>13: Mr. Potato Head Cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mr.%20Potato%20Head%20Cards.png '>mr. potato head cards</a></p><br>
 
+<p><h2>13: Mr. Potato Head Cards</h2>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mr.%20Potato%20Head%20Cards.png '>mr. potato head cards</a></p><br>
+
+<p><h2>14: Mister Bounce Cards</h2>
+<a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mister%20Bounce%20Cards.png'>mister bounce cards</a></p><br>
+
 <br><br>
-<br><br>
+
 
 <center>
 
@@ -109,8 +116,9 @@
 <p><h2>3: Mister Grandpa Troela Cards</h2>
 <a href='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/Mister%20Grandpa%20Troela%20Cards.jpg '>mister grandpa troela cards</a></p><br>
 
+
 <br><br>
-<br><br>
+
 
 <center>
 
