--- a/informatie.html
+++ b/informatie.html
@@ -25,7 +25,7 @@
 <u><b><font size=7><p style="text-align:  Left;">Contact:</p></font></b></u>
  
 <p style="text-align:  Left;"><font size=6> ! ik antwoord ALLEEN op normale zaken, stuur dan ook geen abnormale dingen !
-
+ 
 <p style="text-align:  Left;"><font size=5><img src='https://raw.githubusercontent.com/jenthodemonie/jenthodemonie.github.io/main/mailbox.gif'alt='' />: flying.cards@hotmail.com
 
 <p style="text-align:  Left;"><font size=5> * Noot: For all internet criminals, i don't give a damm about the shit you do and i won't fall for the NASTY TRICKS you're using to get MONEY out of me.
@@ -67,6 +67,15 @@
 
 <p style="text-align:  Left;"><font size=5> Indien gemeend en beleefd opgesteld zal ik deze zeker beantwoorden, zo niet mag u niet vergeten dat dit niet mijn hoofdtaak is en ik in het dagelijkse leven als genoeg domme grapjassen tegenkom die denken interessant te zijn !!!</p>
 
+
+<br><br>
+
+
+<u><b><font size=7><p style="text-align:  Left;">Het echte nieuws:</p></font></b></u>
+
+<p style="text-align:  Left;"><font size=5>Voor de corona scepticus</p>
+
+<a href='https://www.bbc.co.uk/sounds/play/live:bbc_world_service'>bbc world service </a>
 
 <br><br>
 <br><br>
