--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <u><p><font size=6 face="Comic Sans MS">Alle rechten voorbehouden</font></p></u>
 
 <font size=5><MARQUEE WIDTH=900HEIGHT=60>
-Flying Cards.inc 2021
+Flying Cards 2022
 </MARQUEE></font>
 
 <br>
